<resources>
    <string name="app_name">LastFm</string>
    <string name="search_view">Search</string>
    <string name="top_charts_tv_label">Top Charts</string>
    <string name="trending_songs_tv_label">Trending Songs</string>
    <string name="all_songs_tv_label">SEE ALL SONGS</string>
    <string name="popular_albums_tv_label">Popular Albums</string>
    <string name="all_albums_tv_label">SEE ALL ALBUMS</string>
    <string name="featured_artists_tv_label">Featured Artists</string>
    <string name="all_artists_tv_label">SEE ALL ARTISTS</string>
    <string name="url">Url:</string>
    <string name="streamable">Streamable:</string>
    <string name="listeners">Listeners:</string>
    <string name="network_unavailable_error_msg">Please make sure to have stable Internet Connection. Pull down to Refresh.</string>
    <string name="server_unavailable_error_msg">Error fetching data from Server. Please try again pulling down to Refresh.</string>
    <string name="thumbnail_image_description">This will act as a thumbnail image</string>
    <string name="home_page_cover_image">This image will act as a Home Page Cover</string>
</resources>