<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context=".ui.activity.MainActivity">


        <TextView
            android:id="@+id/trendingSongsTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_margin="@dimen/dp_8"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/sp_16"
            android:text="@string/trending_songs_tv_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trendingSongsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_margin="@dimen/dp_8"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/allSongsTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_margin="@dimen/dp_8"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/sp_16"
            android:layout_gravity="center"
            android:text="@string/all_songs_tv_label" />

        <TextView
            android:id="@+id/popularAlbumsTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_margin="@dimen/dp_8"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/sp_16"
            android:text="@string/popular_albums_tv_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularAlbumsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/allAlbumsTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_margin="@dimen/dp_8"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/sp_16"
            android:layout_gravity="center"
            android:text="@string/all_albums_tv_label" />

        <TextView
            android:id="@+id/featuredArtistsTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_margin="@dimen/dp_8"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/sp_16"
            android:text="@string/featured_artists_tv_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/featuredArtistsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/allArtistsTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_margin="@dimen/dp_8"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/sp_16"
            android:layout_gravity="center"
            android:text="@string/all_artists_tv_label" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>