<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.search.lastfm.ui.activity.SearchResultDetailActivity"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/thumbNailImageView"
        android:layout_width="@dimen/icon_size_detail"
        android:layout_height="@dimen/icon_size_detail"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
       />

    <TextView
        android:id="@+id/itemTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="sans-serif-black" />

    <TextView
        android:id="@+id/itemDetailTextView1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/itemDetailTextView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="sans-serif-medium"
        android:text="@string/listeners"/>

    <TextView
        android:id="@+id/itemDetailTextView3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="sans-serif-medium"
        android:text="@string/streamable"/>

    <TextView
        android:id="@+id/itemDetailTextView4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="sans-serif-medium"
        android:text="@string/url"/>

</LinearLayout>
